gitops/apps/workloads/java-api/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: java-api
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: java-api
  template:
    metadata:
      labels:
        app: java-api
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: java-api
          image: ghcr.io/gabrielldn/java-api-with-otlp-sdk@sha256:1111111111111111111111111111111111111111111111111111111111111111
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: tmp
          emptyDir: {}
  strategy:
    canary:
      stableService: java-api-stable
      canaryService: java-api-canary
      maxSurge: 1
      maxUnavailable: 0
      abortScaleDownDelaySeconds: 30
      steps:
        - setWeight: 20
        - pause:
            duration: 45s
        - analysis:
            templates:
              - templateName: java-api-success-rate
              - templateName: java-api-latency-p95
        - setWeight: 50
        - pause:
            duration: 60s
        - analysis:
            templates:
              - templateName: java-api-success-rate
              - templateName: java-api-latency-p95
        - setWeight: 100
