gitops/apps/workloads/java-api/base/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-api-stable
spec:
  selector:
    app: java-api
  ports:
    - name: http
      port: 8080
      targetPort: http
